<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bbc">BBC</string>
    <string name="aljazeera">Aljazeera</string>
    <string name="cnn">CNN</string>
    <string name="fox_news">Fox_news</string>
    <string name="sky_news">Sky_news</string>
    <string name="upcoming">UpComing</string>
    <string name="Upcoming">UpComing</string>
    <string name="G">UpComing</string>
    <string name="new_york_time">New York Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fox_news">Fox_News</string>
    <string name="Sky_news">Sky_News</string>
</resources>