<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/bbc"
            android:icon="@drawable/bbc"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/nav_gallery"
            android:menuCategory="secondary"
            android:icon="@drawable/movie"
            android:title="@string/aljazeera" />
        <item
            android:id="@+id/nav_slideshow"
            android:menuCategory="secondary"
            android:icon="@drawable/mood"
            android:title="@string/cnn" />
        <item
            android:id="@+id/foxNewsFragment"
            android:menuCategory="secondary"
            android:icon="@drawable/heart"
            android:title="@string/fox_news" />
        <item
            android:id="@+id/skyNewsFragment"
            android:menuCategory="secondary"
            android:icon="@drawable/ic_baseline_headset_mic_24"
            android:title="@string/sky_news" />
    </group>
    <item android:title="UpComming"
        android:menuCategory="secondary">

        <menu>
            <item
                android:id="@+id/ny"
                android:menuCategory="secondary"
                android:title="@string/new_york_time" />
        </menu>
    </item>

</menu>